# perftester

./: .gitignore  README.md  config_perftest.py  pyproject.toml  run_black.sh  run_tests.bat  run_tests.sh  setup.py
.github/workflows/: check.yml
docs/: Introduction.md  README.md  benchmarking_against_another_function.md  change_benchmarking_function.md  most_basic_use_memory.md  most_basic_use_time.md  results_most_basic_memory.md  use_case_raw_time_testing.md  use_of_config.md  use_of_limits.md  use_of_memory_tracker.md  use_of_pp.md  use_perftest_as_CLI.md  use_perftester_as_CLI.md
perftest/: __init__.py  __main__.py  perftest.py
perftester/: __init__.py  __main__.py  perftester.py  understand.py
tests/: README.md  doctest_cache.md  doctest_config.md  doctest_function_floats.md  doctest_function_str.md  doctest_test_sum.md  doctest_traceback.md  perftest_for_testing.py  perftester_for_testing.py  results_of_floats.md
tests/for_testing/: perftest_for_testing_2.py  perftester_for_testing_2.py
